10-ingress/04-host-based-routing/dev-workload/02-ingress.yaml


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend: 
          service:
            name: my-app
            port:
              number: 80
    # host + path based routing
    host: "dev.myapp.com"
